templates/iot/http-adapter/040-Deployment-http-adapter.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: iot-http-adapter
  labels:
    app: iot-http-adapter
    component: iot-http-adapter
    enmasse-component: iot

spec:
  replicas: 1

  selector:
    matchLabels:
      app: iot-http-adapter
      component: iot-http-adapter

  triggers:

  template:
    metadata:
      labels:
        app: iot-http-adapter
        component: iot-http-adapter
    spec:
      containers:

# Main protocol adapter container

      - name: http-adapter
        image: ${IOT_HTTP_ADAPTER_IMAGE}
        imagePullPolicy: ${IMAGE_PULL_POLICY}
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            path: /liveness
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 180
        resources:
          limits:
            memory: 512Mi
        ports:
        - containerPort: 8778
          name: jolokia
        - containerPort: 8088
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/config
          name: config
          readOnly: true
        - mountPath: /etc/secrets
          name: secrets
          readOnly: true
        - mountPath: /etc/tls
          name: tls
          readOnly: true

# Qpid dispatch router configurator

      - name: qdr-cfg
        image: ${QDR_PROXY_CONFIGURATOR_IMAGE}
        imagePullPolicy: ${IMAGE_PULL_POLICY}
        volumeMounts:
        - mountPath: /var/qdr-certs
          name: qdr-tmp-certs
        resources:
          limits:
            memory: 64Mi

# Proxy Qpid dispatch router

      - name: qdr-proxy
        image: ${QDROUTERD_BASE_IMAGE}
        imagePullPolicy: ${IMAGE_PULL_POLICY}
        args: ["/sbin/qdrouterd", "-c", "/etc/config/qdrouterd.conf" ]
        volumeMounts:
        - mountPath: /var/qdr-certs
          name: qdr-tmp-certs
          readOnly: true
        - mountPath: /etc/config
          name: qdr-proxy-config
          readOnly: true
        resources:
          limits:
            memory: 128Mi

# Volumes

      volumes:
      - name: config
        configMap:
          name: iot-http-adapter-config
      - name: secrets
        secret:
          secretName: iot-http-adapter-secrets
      - name: tls
        secret:
          secretName: iot-http-adapter-tls
      - name: qdr-proxy-config
        configMap:
          name: qdr-proxy-configurator
      - name: qdr-tmp-certs
        emptyDir: {}
