templates/iot/http-adapter/040-DeploymentConfig-http-adapter.yaml
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: iot-http-adapter
  labels:
    app: iot-http-adapter
    deploymentconfig: iot-http-adapter
    enmasse-component: iot
spec:
  replicas: 1

  selector:
    app: iot-http-adapter
    deploymentconfig: iot-http-adapter

  strategy:
    type: Rolling

  triggers:

    - type: ConfigChange

    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - http-adapter
        from:
          kind: ImageStreamTag
          name: iot-http-adapter:latest

    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - qdr-proxy
        from:
          kind: ImageStreamTag
          name: qdrouterd-base:1.4.1

    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - qdr-cfg
        from:
          kind: ImageStreamTag
          name: qdr-proxy-configurator:latest

  template:
    metadata:
      labels:
        app: iot-http-adapter
        deploymentconfig: iot-http-adapter
    spec:
      containers:

# Main protocol adapter container

      - name: http-adapter
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            path: /liveness
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 180
        resources:
          limits:
            memory: 512Mi
        ports:
        - containerPort: 8778
          name: jolokia
        - containerPort: 8088
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8081
          name: actuator
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/config
          name: config
          readOnly: true
        - mountPath: /etc/secrets
          name: secrets
          readOnly: true
        - mountPath: /etc/tls
          name: tls
          readOnly: true

# Qpid dispatch router configurator

      - name: qdr-cfg
        volumeMounts:
        - mountPath: /var/qdr-certs
          name: qdr-tmp-certs
        resources:
          limits:
            memory: 64Mi

# Proxy Qpid dispatch router

      - name: qdr-proxy
        args: ["/sbin/qdrouterd", "-c", "/etc/config/qdrouterd.conf" ]
        volumeMounts:
        - mountPath: /var/qdr-certs
          name: qdr-tmp-certs
          readOnly: true
        - mountPath: /etc/config
          name: qdr-proxy-config
          readOnly: true
        resources:
          limits:
            memory: 128Mi

      volumes:
      - name: config
        configMap:
          name: iot-http-adapter-config
      - name: secrets
        secret:
          secretName: iot-http-adapter-secrets
      - name: tls
        secret:
          secretName: iot-http-adapter-tls
      - name: qdr-proxy-config
        configMap:
          name: qdr-proxy-configurator
      - name: qdr-tmp-certs
        emptyDir: {}
